<resources>
    <string name="app_name">FINAL_PROJECT</string>
    <string name="api_key">6306ad54c3e34fd098c15bcd0b4f1c7e</string>
    <string name="image_view">Image view</string>
    <string name="business">Business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="register">Register</string>
    <string name="new_here">New Here?</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_valid_email_here">Enter Valid Email Here</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="already_member">Already Member?</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="logout">logout</string>
    <string name="bookmark_icon">bookmark-icon</string>
    <string name="add_to_bookmark">Add to Bookmark</string>
    <string name="profile_picture">Profile picture</string>
    <string name="news_app">News App</string>
    <string name="news_headline">News Headline</string>
    <string name="source">source</string>
    <string name="star">star</string>
    <string name="delete_account">Delete Account</string>
</resources>