<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:viewBindingIgnore="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="@font/nunitobold"
            android:text=""/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/logout"
            android:textSize="12sp"
            android:background="@drawable/red_button"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            app:defaultQueryHint="Search News..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/business"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/general"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/health"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/science"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/sports"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/technology"
                android:textSize="12sp"
                android:background="@drawable/button_radius"
                android:textColor="@android:color/white"
                app:backgroundTint="@null" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>