<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/news_headline"
                android:fontFamily="@font/nunitobold"
                android:maxLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_source"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunitoregular"
                    android:text="@string/source"
                    android:textColor="@color/purple_500"
                    android:maxLines="1"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/bookmarkTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunitoregular"
                    android:text="@string/add_to_bookmark"/>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_headline"
            android:src="@drawable/image_not_available"
            android:scaleType="centerCrop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view" />

    </LinearLayout>

</androidx.cardview.widget.CardView>